# nanosynth

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  REVIEW.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml  release.yml
demos/: 01_sine.py  02_subtractive.py  03_fm.py  04_additive.py  05_pluck.py  06_ringmod.py  07_delay_reverb.py  08_resonance.py  09_demand_sequencer.py  10_chaos.py  11_stereo_pad.py  12_server_sine.py  13_server_pad.py  14_spectral.py  15_gendy.py  16_klank_splay.py  17_freqshift.py  18_operators_buffers.py
docs/: getting-started.md  index.md
docs/api/: enums.md  envelopes.md  index.md  osc.md  scsynth.md  server.md  synthdef.md
docs/api/ugens/: basic.md  beq.md  bufio.md  chaos.md  convolution.md  delay.md  demand.md  diskio.md  dynamics.md  envelopes.md  ffsinosc.md  filters.md  gendyn.md  granular.md  hilbert.md  index.md  info.md  inout.md  lines.md  mac.md  ml.md  noise.md  osc.md  panning.md  physical.md  pv.md  reverb.md  safety.md  triggers.md
scripts/: trim_boost.py
src/nanosynth/: __init__.py  _osc.cpp  _scsynth.cpp  compiler.py  enums.py  envelopes.py  osc.py  scsynth.py  server.py  synthdef.py
src/nanosynth/ugens/: __init__.py  basic.py  beq.py  bufio.py  chaos.py  convolution.py  delay.py  demand.py  diskio.py  dynamics.py  envelopes.py  ffsinosc.py  filters.py  gendyn.py  granular.py  hilbert.py  info.py  inout.py  lines.py  mac.py  ml.py  noise.py  osc.py  panning.py  physical.py  pv.py  reverb.py  safety.py  triggers.py
tests/: test_envelopes.py  test_osc.py  test_scsynth.py  test_server.py  test_synthdef.py  test_ugens.py
